[tool.poetry]
name = "bioinformatics"
version = "0.1.0"
description = ""
authors = ["carlos_ruiz <cruiz@petdx.com>"]
readme = "README.md"
packages = [{include = "bioinformatics", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
biopython = "^1.80"
pandas = "^1.5.2"
pandas-stubs = "^1.5.2.221124"
poetry-types = "^0.3.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
isort = "^5.10.1"
hypothesis = "^6.60.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
strict_optional = "False"
ignore_missing_imports = "True"
disallow_untyped_decorators = "False"
disallow_untyped_defs = "True"

[tool.pytest.ini_options]
ignore_missing_imports = "True"
addopts = "-p no:warnings"

[tool.coverage.run]
omit = ["*tests*"]
